--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,22 @@
 ---
+dist: bionic
 sudo: required 
-
+env:
+  DOCKER_CLI_EXPERIMENTAL: enabled
+  DOCKER_BUILDKIT: 1
 services:
   - docker
-
 before_install:
+  # Install latest docker
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+  - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+  - sudo apt-get update
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
   - docker version
   - docker info
-
 script:
-- docker build -t matthijsbos/nerdrage-platformio-remote .
-
+  - docker buildx create --use --name armv7builder
+  - docker buildx build --platform linux/arm/v7,linux/amd64 -t matthijsbos/nerdrage-platformio-remote:latest .
 after_success:
   - docker login -u $DOCKER_USER -p $DOCKER_PASS
   - docker push matthijsbos/nerdrage-platformio-remote:latest
