--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ before_install:
   - echo '{"experimental":"enabled"}' | sudo tee /etc/docker/daemon.json
   - mkdir -p $HOME/.docker
   - echo '{"experimental":"enabled"}' | sudo tee $HOME/.docker/config.json
-  - sudo service docker restart  
-script:
+  - sudo systemctl restart dockerscript
   # register QEMU in the build agent according to 
   # https://blog.hypriot.com/post/setup-simple-ci-pipeline-for-arm-images/
   - docker run --rm --privileged multiarch/qemu-user-static:register --reset
