--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,8 @@ before_install:
   - echo '{"experimental":"enabled"}' | sudo tee /etc/docker/daemon.json
   - mkdir -p $HOME/.docker
   - echo '{"experimental":"enabled"}' | sudo tee $HOME/.docker/config.json
-  - sudo systemctl restart dockerscript
+  - sudo systemctl restart docker
+script:
   # register QEMU in the build agent according to 
   # https://blog.hypriot.com/post/setup-simple-ci-pipeline-for-arm-images/
   - docker run --rm --privileged multiarch/qemu-user-static:register --reset
