--- a/.travis.yml
+++ b/.travis.yml
@@ -17,21 +17,14 @@ before_install:
   - sudo apt-get install qemu binfmt-support qemu-user-static
   - docker version
   - docker info
-  - echo '{"experimental":"enabled"}' | sudo tee /etc/docker/daemon.json
-  - mkdir -p $HOME/.docker
-  - echo '{"experimental":"enabled"}' | sudo tee $HOME/.docker/config.json
-  - sudo systemctl start docker
 script:
+  - docker login -u $DOCKER_USER -p $DOCKER_PASS
   # register QEMU in the build agent according to 
-  # https://blog.hypriot.com/post/setup-simple-ci-pipeline-for-arm-images/
+  # https://medium.com/@quentin.mcgaw/cross-architecture-docker-builds-with-travis-ci-arm-s390x-etc-8f754e20aaef
   - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
   # Create builder
-  - docker buildx create --name builder --platform linux/arm/v7,linux/amd64 --use
+  - docker buildx create --name builder --use
   # Inspect and ensure builder is running using --bootstrap
   - docker buildx inspect --bootstrap builder
   # Build images
-  - docker buildx build --load --progress plain --platform linux/arm/v7,linux/amd64 -t matthijsbos/nerdrage-platformio-remote:latest .
-after_success:
-  # Logina and publish on docker hub
-  - docker login -u $DOCKER_USER -p $DOCKER_PASS
-  - docker push matthijsbos/nerdrage-platformio-remote:latest
+  - docker buildx build --push --progress plain --platform linux/arm/v7,linux/amd64 -t matthijsbos/nerdrage-platformio-remote:latest .
