--- a/.travis.yml
+++ b/.travis.yml
@@ -7,24 +7,24 @@ env:
   DOCKER_BUILDKIT: 1
 services:
   - docker
-before_install:
-  # Install latest docker
-  
+install:
+  # Install latest docker and print version info
   - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
   - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
   - sudo apt-get update
   - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
-  - sudo apt-get install qemu binfmt-support qemu-user-static
   - docker version
   - docker info
+  # install qemu binaries
+  - sudo apt-get install qemu binfmt-support qemu-user-static
 script:
   - docker login -u $DOCKER_USER -p $DOCKER_PASS
   # register QEMU in the build agent according to 
   # https://medium.com/@quentin.mcgaw/cross-architecture-docker-builds-with-travis-ci-arm-s390x-etc-8f754e20aaef
   - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-  # Create builder
+  # Create buildx builder
   - docker buildx create --name builder --use
   # Inspect and ensure builder is running using --bootstrap
   - docker buildx inspect --bootstrap builder
-  # Build images
+  # Build images for multiple platforms using buildx
   - docker buildx build --push --progress plain --platform linux/arm/v7,linux/amd64 -t matthijsbos/nerdrage-platformio-remote:latest .
