--- a/.travis.yml
+++ b/.travis.yml
@@ -29,12 +29,27 @@ before_script:
   - docker buildx inspect --bootstrap builder
   # Build images for multiple platforms using buildx
 
+stages:
+  - name: deploy
+    # require the branch name to be master (note for PRs this is the base branch name)
+    if: branch = master
+
 jobs:
   include:
-    - stage: build
+    - name: build platform linux/amd64
+      stage: build
       script:
-        - docker buildx build --progress plain --platform linux/amd64 -t matthijsbos/nerdrage-platformio-remote:latest .
-    - stage: build
+        - docker buildx build --push --progress plain --platform linux/amd64 -t matthijsbos/nerdrage-platformio-remote:test-amd64 .
+    - name: build platform linux/arm/v7
+      stage: build
       script:
-        - docker buildx build --progress plain --platform linux/arm/v7 -t matthijsbos/nerdrage-platformio-remote:latest .
+        - docker buildx build --push --progress plain --platform linux/arm/v7 -t matthijsbos/nerdrage-platformio-remote:test-armv7 .
+    - name: create manifest for multi platform image
+      stage: manifest
+      script: 
+        - docker manifest create matthijsbos/nerdrage-platformio-remote:test binaries \
+              matthijsbos/nerdrage-platformio-remote:test-amd64 \
+              matthijsbos/nerdrage-platformio-remote:test-armv7
+        - docker manifest push matthijsbos/nerdrage-platformio-remote:test
+    
     
