pull before manifest creation

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,9 +47,9 @@ jobs:
     - name: create manifest for multi platform image
       stage: manifest
       script: 
-        - docker manifest create matthijsbos/nerdrage-platformio-remote:test binaries 
-              matthijsbos/nerdrage-platformio-remote:test-amd64
-              matthijsbos/nerdrage-platformio-remote:test-armv7
+        - docker pull matthijsbos/nerdrage-platformio-remote:test-amd64
+        - docker pull matthijsbos/nerdrage-platformio-remote:test-armv7
+        - docker manifest create matthijsbos/nerdrage-platformio-remote:test matthijsbos/nerdrage-platformio-remote:test-amd64 matthijsbos/nerdrage-platformio-remote:test-armv7
         - docker manifest push matthijsbos/nerdrage-platformio-remote:test
     
     
